[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://entities/tools/tool.gd" id="1_5xmwn"]

[node name="Tool" type="Node3D"]
script = ExtResource("1_5xmwn")

[node name="Raycaster" type="RayCast3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
target_position = Vector3(0, -1.5, 0)
collide_with_areas = true
debug_shape_custom_color = Color(0, 0.839216, 0.462745, 1)

[node name="ToolPrimaryCooldown" type="Timer" parent="."]

[node name="ToolSecondaryCooldown" type="Timer" parent="."]

[node name="ToolTertiaryCooldown" type="Timer" parent="."]

[node name="Mesh Placeholder" type="MeshInstance3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 1.4, 0, 0, 0, 0.2, 0, 0, 0)

[connection signal="timeout" from="ToolPrimaryCooldown" to="." method="_on_tool_primary_cooldown_timeout"]
[connection signal="timeout" from="ToolSecondaryCooldown" to="." method="_on_tool_secondary_cooldown_timeout"]
[connection signal="timeout" from="ToolTertiaryCooldown" to="." method="_on_tool_tertiary_cooldown_timeout"]
